# 65c02-SIM

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SIM_65C02.js  SIM_65C02.wasm  build-linux.sh  build-web.sh  build-win.sh  build.sh  comp_bin.sh  compile-bin.sh  compile_bin.sh  create-cartridge.sh  create-microdos-cartridge.sh  create-sdk.sh  image-to-bin.sh  index.html  main.cpp  midi-to-bin.sh  run.sh
.github/workflows/: release.yml
Binaries/: bios.h  cube.c  echo.c  fib.c  fillVRAM.c  fullTest.c  game.c  gpu.h  lcd.h  mat.c  mat64.c  microDOS.c  room.c  shrek.c  soundTest.c  test.c  testBIOS.c  testGPU.c  testLCD.c  testNET.c  testPrints.c  testSD.c  testSID.c  testVIA.c  test_gpu.c  tetris.c  vga.s
Binaries/Apps/: memtest.c  nano.c  ping.c  play.c  testSID.c  wget.c
Binaries/Include/: GPU.h  VIA.h  bios.h  lcd.h
Binaries/Libs/: BIOS.c  BIOS.h  GPU.h  GPUDoubleBuffer.h  LCD.h  NET.c  NET.h  SD.c  SD.h  SID.h  VIA.h
Binaries/microDOS/: commands.c  commands.h  fs_commands.c  msg.c  msg.h  nano_cmd.c  net_commands.c  run_cmd.c  shell.h  sid_abi.c
Componentes/: ACIA.cpp  ACIA.h  CPU.cpp  CPU.h  Emulator.cpp  Emulator.h  LCD.cpp  LCD.h  Mem.cpp  Mem.h
Frontend/: MediaExporter.cpp  MediaExporter.h  UpdateChecker.cpp  UpdateChecker.h  main.cpp
Frontend/Compiler/: CC65VFS.cpp  CC65VFS.h  CompilerFrontend.cpp  CompilerFrontend.h
Frontend/Control/: AppState.h  CartridgeUtils.cpp  CartridgeUtils.h  Console.cpp  Console.h  SDKManager.cpp  SDKManager.h  SymbolTable.cpp  SymbolTable.h
Frontend/GUI/: CRTFilter.cpp  CRTFilter.h  ConsoleWindow.cpp  ConsoleWindow.h  ControlWindow.cpp  ControlWindow.h  IDEWindow.cpp  LCDWindow.cpp  LCDWindow.h  RegistersWindow.cpp  RegistersWindow.h  SDUtils.cpp  SDUtils.h  SIDViewerWindow.cpp  SIDViewerWindow.h  ScriptConsoleWindow.cpp  ScriptConsoleWindow.h  UpdatePopup.cpp  UpdatePopup.h  VRAMViewerWindow.cpp  VRAMViewerWindow.h
Frontend/UI/: CustomFileDialog.cpp  CustomFileDialog.h  FileDialogs.cpp  PopupManager.cpp  RecordingManager.cpp  UIModules.h
Frontend/web/: WebFileUtils.cpp  WebFileUtils.h  shell.html
GPU/: image-to-bin.py
GPU/generator/: image-to-bin.py
Gui/: main_gui.cpp
Hardware/: ACIA.cpp  ACIA.h  CPU.cpp  CPU.h  Emulator.cpp  Emulator.h  GPU.cpp  GPU.h  LCD.cpp  LCD.h  Mem.cpp  Mem.h  SID.cpp  SID.h  VIA.cpp  VIA.h
Hardware/Audio/: AudioRecorder.cpp  AudioRecorder.h  SID.cpp  SID.h  SID.inl
Hardware/CPU/: ADC.cpp  ADC.h  AND.cpp  AND.h  ASL.cpp  ASL.h  BBR.cpp  BBR.h  BBS.cpp  BBS.h  BCC.cpp  BCC.h  BCS.cpp  BCS.h  BEQ.cpp  BEQ.h  BIT.cpp  BIT.h  BMI.cpp  BMI.h  BNE.cpp  BNE.h  BPL.cpp  BPL.h  BRA.cpp  BRA.h  BRK.cpp  BRK.h  BVC.cpp  BVC.h  BVS.cpp  BVS.h  CLC.cpp  CLC.h  CLD.cpp  CLD.h  CLI.cpp  CLI.h  CLV.cpp  CLV.h  (+115 more)
Hardware/Comm/: ACIA.cpp  ACIA.h  ACIA.inl  ESP8266.cpp  ESP8266.h  SDCard.cpp  SDCard.h  VIA.cpp  VIA.h  VIA.inl
Hardware/Core/: BreakpointManager.cpp  BreakpointManager.h  Bus.cpp  Bus.h  Bus.inl  Cartridge.h  CartridgeLoader.cpp  CartridgeLoader.h  Emulator.cpp  Emulator.h  Emulator.inl  IBusDevice.h  IBusDevice.inl  ISerializable.h
Hardware/Memory/: RAM.cpp  RAM.h  RAM.inl  ROM.cpp  ROM.h  ROM.inl
Hardware/Scripting/: ScriptEngine.cpp  ScriptEngine.h
Hardware/Video/: GPU.cpp  GPU.h  GPU.inl  LCD.cpp  LCD.h  LCD.inl
Instrucciones/: ADC.cpp  ADC.h  AND.cpp  AND.h  ASL.cpp  ASL.h  BBR.cpp  BBR.h  BBS.cpp  BBS.h  BCC.h  BCS.h  BEQ.cpp  BEQ.h  BIT.h  BMI.cpp  BMI.h  BNE.cpp  BNE.h  BPL.h  BRA.h  BRK.cpp  BRK.h  BVC.h  BVS.cpp  BVS.h  CLC.h  CLD.cpp  CLD.h  CLI.cpp  CLI.h  CLV.cpp  CLV.h  CMP.cpp  CMP.h  CPX.h  CPY.h  DEC.cpp  DEC.h  DEX.cpp  (+84 more)
Linker/: App-Runtime.s  C-Runtime-GPU.cfg  C-Runtime-GPUDoubleBuffer.cfg  bios.s  generate_app_cfg.py  generate_cfg.py  inicio.s  inicio_basic.s  inicio_wozmon.s  memoria.cfg  memoria_asm.cfg  microdos_bios.s  raw.cfg
Linker/msbasic/: extra.s  imports.s  init.s
Programas/: basic.c  bios.h  colortest.s  fib.c  fullTest.c  holamundo.c  lcd.h  mat.c  mat64.c  shrek.c  sidTest.s  soundTest.c  testBIOS.c  test_bios.c  test_data.c  vramtest.s  wozmon.c
SID/: awake.mid  chiisana-bokuensha.mid  cynthia.mid  dont-say-lazy.mid  fantastic-dreamer.mid  fortnite.mid  komi.mid  midi_to_sid.py  mikubeam.mid  og.mid  seishun.mid
ScriptingAPI/: test_api.py
Terminal/: main_term.cpp
UnitTests/: BBR.cpp  BBR_Test.cpp  BBS.cpp  BBS_Test.cpp  BCC.cpp  BCS.cpp  BEQ.cpp  BMI.cpp  BNE.cpp  BPL.cpp  BRA.cpp  BRK.cpp  BVC.cpp  BVS.cpp  CLC.cpp  CLD.cpp  CLI.cpp  CLV.cpp  DEX.cpp  DEY.cpp  ExampleTest.cpp  INX.cpp  INY.cpp  JSR.cpp  LCD_Test.cpp  LDA_Test.cpp  NOP.cpp  NOPTest.cpp  NOP_Test.cpp  PHA.cpp  PHP.cpp  PHX.cpp  PHY.cpp  PLA.cpp  PLP.cpp  PLX.cpp  PLY.cpp  RMB.cpp  RMB_Test.cpp  RTI.cpp  (+18 more)
assets/midi/: idol.mid  (+17 more)
cmake/: CompilerOptions.cmake  CoreTarget.cmake  Dependencies.cmake  EmbedCC65.py  EmbedCRTShaders.cmake  EmbeddedResources.cmake  FrontendTarget.cmake  GenerateIconHeader.cmake  UnitTests.cmake  embed_binary.py  mingw-toolchain.cmake  patch_httplib.cmake  patch_imguifiledialog.cmake  patch_miniz.cmake  patch_pocketpy.cmake  patch_sndfile.cmake
roms/: awake.65c  bocchi.65c  cube.65c  cynthia.65c  eater.65c  echo.65c  fillVRAM.65c  finch.65c  fortnite.65c  fukashigi.65c  fullTest.65c  game.65c  idol.65c  komi.65c  mat.65c  mat64.65c  microDOS.65c  miku.65c  og.65c  overworld.65c  rick.65c  roms.json  room.65c  seishun.65c  sweeden.65c  test-me.65c  test.65c  testGPU.65c  testNET.65c  testSD.65c  testSID.65c  testVIA.65c  tetris.65c  usseewa.65c  vga.65c  xdd.65c
scripts/: benchmark-room.sh  build-linux.sh  build-web.sh  build-win.sh  compile-bin.sh  create-cartridge.sh  create-microdos-cartridge.sh  create-sdk.sh  image-to-bin.sh  midi-to-bin.sh  pgo-room.sh
wiki/: Binaries.md  Breakpoints.md  Building.md  CPU-Instructions.md  CPU.md  Cartridge-System.md  Debugger.md  ESP8266-and-NET-Library.md  Frontend.md  GPU.md  Hardware.md  Home.md  LCD.md  Linker-and-Memory-Layout.md  SD-Card.md  SDK-Programs.md  SDK.md  SID.md  Save-States.md  Scripting.md  Unit-Tests.md  VIA-and-ACIA.md  WebAssembly-Build.md
(+718 files in other folders)
